# mcp-datetimeday

./: .gitignore  .mcpbignore  README.md  manifest.json  mcp-datetimeday.mcpb  pyproject.toml
src/mcp_datetimeday/: __init__.py  server.py
