[project]
name = "mcp-datetimeday"
version = "0.1.0"
description = "A lightweight MCP server for date, time, and day of week"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
mcp-datetimeday = "mcp_datetimeday.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_datetimeday"]
